--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.sakaiproject.nakamura</groupId>
   <artifactId>org.sakaiproject.nakamura.core</artifactId>
   <packaging>bundle</packaging>
-  <version>vcam_sparsemapcontent_001</version>
+  <version>0.0.1.vcam_sparsemapcontent</version>
   <name>Sakai Nakamura :: Sparse Map Content Storage bundle.</name>
   <description>Server that uses a sparse map to represent content mapping closely to a colum database like Cassandra.</description>
   <properties>
