--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
  <parent>
     <groupId>org.sakaiproject.nakamura</groupId>
     <artifactId>core-base</artifactId>
-    <version>0.0.1.vcam_sparsemapcontent</version>
+    <version>1.1-20110830</version>
     <relativePath>parent/pom.xml</relativePath>
   </parent>
   <groupId>org.sakaiproject.nakamura</groupId>
